Añadido facultades de getafe

--- a/Acreditaciones_Delejornadas/base.html
+++ b/Acreditaciones_Delejornadas/base.html
@@ -9,7 +9,7 @@
 <img style="width: 215px; height: 160px; left: 82px; top: 34px; position: absolute; border-radius: 4px"
      src="base/dele.png">
 <div style="width: 281px; height: 84px; left: 49px; top: 194px; position: absolute; color: #001489; font-size: 60px; font-family: Inter; font-weight: 700; word-wrap: break-word">
-    XIV JFDE
+    XV JFDE
 </div>
 <img style="width: 297px; height: 91px; left: 41px; top: 766px; position: absolute"
      src="base/uc3m.png">
