--- a/coordinadores/src/app.html
+++ b/coordinadores/src/app.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth;">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="/eps_logo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Coordinadores</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
